--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,9 +3,10 @@ body{
     padding: 0;
     margin: 0;
     overflow-x: hidden;
+    color: #3E3F43;
 }
 a{
-    color: #000;
+    color: #3E3F43;
     text-decoration: none;
 }
 // Шапка
@@ -38,7 +39,6 @@ a{
     }
     .header__link-sing-up{
         text-transform: uppercase;
-        color: #3E3F43;
         font-weight: bold;
         padding: 9px 35px 9px 36px;
         border: 1px solid #3E3F43;
@@ -80,6 +80,30 @@ a{
         width: 390px;
         height: 390px;
         background-image: url(../images/listik.png);
+    }
+    .promo-text__treatment-to-the-client{
+        font-family: Nunito;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 36px;
+        line-height: 49px;
+    }
+    .promo-text__treatment-to-the-client span{
+        font-weight: bold;
+    }
+    .promo-text__title{
+        font-family: Nunito;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 72px;
+        line-height: 98px;
+        color: #313235;
+    }
+    .promo-text__button{
+        background: #DAA520;
+        border-radius: 4px;
+        padding: 14px 24px;
+        border: none;
     }
 }
 
