--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -51,6 +51,9 @@ a{
 // Промо текст 
 
 .promo-text{
+    padding-bottom: 327px;
+}
+.promo-text{
     .promo-text__block-image{
         position: absolute;
         right: 0;
@@ -108,3 +111,37 @@ a{
 }
 
 // --Промо текст--
+
+// Информация о компании
+
+.about-us{
+    .about-us__img-wooden-objects{
+        width: 278px;
+        height: 388px;
+        background: #F7DEA6;
+        border-bottom-left-radius: 90px;
+        border-top-right-radius: 90px;
+    }
+    .about-us__img-wooden-objects::after{
+        content: "";
+        position: relative;
+        left: 38px;
+        top: 80px;
+        display: flex;
+        width: 388px;
+        height: 306px;
+        background-image: url(../images/derevynie-predmeti.png);
+    }
+    .about-us__img-wooden-objects::before{
+        content: "";
+        position: absolute;
+        left: -144px;
+        top: 295px;
+        display: flex;
+        width: 390px;
+        height: 390px;
+        background-image: url(../images/listik.png);
+    }
+}
+
+// --Информация о компании--
