добавление блока услуг и редактирования заколовков блоков

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -112,8 +112,61 @@ a{
 
 // --Промо текст--
 
+// Заголовки блоков
+
+.header-block__promo-text{
+    padding-left: 40px;
+    font-family: Nunito;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 49px;
+    color: #3E3F43;
+}
+.header-block__promo-text::before{
+    content: "";
+    position: absolute;
+    left: 15px;
+    top: 9px;
+    display: flex;
+    width: 30px;
+    height: 30px;
+    background-image: url(../images/listik_SMAILL.png);
+}
+.header-block__promo-text::after{
+    content: "";
+    display: flex;
+    width: 443px;
+    height: 2px;
+    background: #000;
+    margin-left: 231px;
+    margin-top: -25px;
+}
+.header-block__promo-text-ordering::after{
+    width: 214px;
+    margin-left: 268px;
+}
+.header-block__promo-text-large{
+    margin: 0;
+    font-family: Nunito;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 72px;
+    line-height: 98px;
+    color: rgba(34, 34, 34, 0.1);
+    text-align: right;
+}
+.header-block__title-block{
+    margin-bottom: 20px;
+}
+
+// --Заголовки блоков--
+
 // Информация о компании
 
+.main__about-us{
+    margin-bottom: 250px;
+}
 .about-us{
     .about-us__img-wooden-objects{
         width: 278px;
@@ -141,36 +194,6 @@ a{
         width: 390px;
         height: 390px;
         background-image: url(../images/listik.png);
-    }
-    .about-us__promo-about-us{
-        padding-left: 40px;
-        font-family: Nunito;
-        font-style: normal;
-        font-weight: bold;
-        font-size: 36px;
-        line-height: 49px;
-        color: #3E3F43;
-    }
-    .about-us__promo-about-us::before{
-        content: "";
-        position: absolute;
-        left: 15px;
-        top: 9px;
-        display: flex;
-        width: 30px;
-        height: 30px;
-        background-image: url(../images/listik_SMAILL.png);
-    }
-    .about-us__about-us-large-text{
-        font-family: Nunito;
-        font-style: normal;
-        font-weight: 800;
-        font-size: 72px;
-        line-height: 98px;
-        color: rgba(34, 34, 34, 0.1);
-    }
-    .about-us__title-block{
-        margin-bottom: 20px;
     }
     .about-us__title{
         font-family: Nunito;
@@ -204,3 +227,35 @@ a{
 }
 
 // --Информация о компании--
+
+// Информация о услугах
+
+.services{
+    .services__item{
+        text-align: center;
+    }
+    .services__item span{
+        position: absolute;
+        left: 39px;
+        top: 17px;
+        font-family: Nunito;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 96px;
+        line-height: 131px;
+        color: rgba(249, 189, 189, 0.25);
+    }
+    .services__img{
+        margin-bottom: 20px;
+    }
+    .services__description{
+        font-family: Nunito;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 33px;
+        color: #000;
+    }
+}
+
+// --Информация о услугах 
