--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -107,6 +107,12 @@ a{
         border-radius: 4px;
         padding: 14px 24px;
         border: none;
+        font-family: Nunito;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 16px;
+        line-height: 22px;
+        color: #fff;
     }
 }
 
@@ -255,6 +261,19 @@ a{
         font-size: 24px;
         line-height: 33px;
         color: #000;
+    }
+    .services__button{
+        background: #DAA520;
+        border-radius: 4px;
+        padding: 14px 24px;
+        border: none;
+        font-family: Nunito;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 16px;
+        line-height: 22px;
+        color: #fff;
+        margin: 60px 0 120px 0;
     }
 }
 
