--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -286,6 +286,51 @@ a{
         width: 338px;
         margin-left: 268px;
     }
+    .category__item{
+        background: #F9BDBD;
+        border-bottom-left-radius: 150px;
+        border-top-right-radius: 150px;
+        max-width: 280px;
+        min-height: 400px;
+        margin: auto;
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 40px;
+    }
+    .category__button{
+        display: block;
+        margin-left: auto;
+        border: 1px solid #3E3F43;
+        box-sizing: border-box;
+        border-radius: 4px;
+        font-family: Nunito;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 25px;
+        text-align: center;
+        background: none;
+        padding: 8px 18px;
+        margin-right: 16px;
+        margin-bottom: 24px;
+        color: #3E3F43;
+    }
+    .category__img{
+        display: block;
+        margin: auto;
+    }
+    .category__the-first-picture{
+        margin-left: 0;
+    }
+    .category__title{
+        font-family: Nunito;
+        font-style: normal;
+        font-weight: 800;
+        font-size: 24px;
+        line-height: 33px;
+        margin-left: 16px;
+        margin-top: 24px;
+    }
 }
 
 // --Категории--
