добавление цветов блоков категорий

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -297,6 +297,12 @@ a{
         flex-direction: column;
         margin-bottom: 40px;
     }
+    .category__item--peach-color{
+        background: #F7DEA6;
+    }
+    .category__item--blue-color{
+        background: #A8DCEC;
+    }
     .category__button{
         display: block;
         margin-left: auto;
