добавление разметки блока отзывов

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -281,6 +281,9 @@ a{
 
 // Категории
 
+.main__сategory{
+    margin-bottom: 120px;
+}
 .сategory{
     .header-block__promo-text::after{
         width: 338px;
