--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -343,3 +343,99 @@ a{
 }
 
 // --Категории--
+
+// Отзывы
+
+.main__reviews{
+    margin-bottom: 120px;
+}
+.reviews{
+    .header-block__promo-text::after{
+        width: 396px;
+        margin-left: 257px;
+    }
+    .reviews__item{
+        padding: 54px 16px;
+        border: 1px solid #A8DCEC;
+        box-sizing: border-box;
+        border-bottom-left-radius: 86px;
+        border-top-right-radius: 86px;
+        margin-bottom: 21px;
+    }
+    .reviews__rating{
+        margin-bottom: 16px;
+    }
+    .reviews__opinion{
+        font-family: Nunito;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 19px;
+    }
+    .reviews__the-control-buttons-reviews{
+        margin-bottom: 23px;
+    }
+    .reviews__name-author{
+        margin: 0;
+        font-family: Nunito;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 12px;
+        line-height: 16px;
+        color: #AFAFAF;
+        align-self: center;
+        margin-right: 8px;
+    }
+    .reviews__previous{
+        font-family: Nunito;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 19px;
+        color: #C4C4C4;
+        background: none;
+        border: none;
+        padding-left: 45px;
+    }
+    .reviews__previous::before{
+        position: absolute;
+        content: "";
+        margin-top: 5px;
+        left: 19px;
+        width: 33px;
+        height: 8px;
+        background-image: url(../images/Arrow2.png);
+    }
+    .reviews__next{
+        font-family: Nunito;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 19px;
+        color: #3E3F43;
+        background: none;
+        border: none;
+        padding-right: 42px;
+    }
+    .reviews__next::after{
+        position: absolute;
+        content: "";
+        margin-top: 5px;
+        right: 17px;
+        width: 33px;
+        height: 8px;
+        background-image: url(../images/Arrow1.png);
+    }
+    .reviews__button{
+        width: 40px;
+        height: 8px;
+        border-radius: 8px;
+        background: #E5E5E5;
+        margin-left: 8px;
+    }
+    .reviews__button--active{
+        background: #DAA520;
+    }
+}
+
+// --Отзывы--
