--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,7 +12,7 @@ a{
 // Шапка
 .body__header{
     padding-top: 20px;
-    padding-bottom: 140px;
+    padding-bottom: 164px;
 }
 .header{
     .header__wrapper{
@@ -95,6 +95,7 @@ a{
         font-weight: bold;
     }
     .promo-text__title{
+        margin-bottom: 16px;
         font-family: Nunito;
         font-style: normal;
         font-weight: bold;
@@ -159,7 +160,7 @@ a{
     text-align: right;
 }
 .header-block__title-block{
-    margin-bottom: 20px;
+    margin-bottom: 43px;
 }
 
 // --Заголовки блоков--
@@ -167,7 +168,7 @@ a{
 // Информация о компании
 
 .main__about-us{
-    margin-bottom: 250px;
+    margin-bottom: 235px;
 }
 .about-us{
     .about-us__img-wooden-objects{
@@ -219,12 +220,12 @@ a{
         color: #000;
     }
     .about-us__wooden-furniture-manufacturing-services{
-        margin-bottom: 180px;
+        margin-bottom: 165px;
     }
     .about-us__img-custom-furniture{
         position: absolute;
         right: 0;
-        margin-top: -268px;
+        margin-top: -269px;
     }
 }
 
@@ -233,6 +234,9 @@ a{
 // Информация о услугах
 
 .services{
+    .header-block__title-block{
+        margin-bottom: 67px;
+    }
     .header-block__promo-text::after{
         width: 214px;
         margin-left: 268px;
@@ -242,8 +246,8 @@ a{
     }
     .services__item span{
         position: absolute;
-        left: 39px;
-        top: 17px;
+        left: 24px;
+        top: 25px;
         font-family: Nunito;
         font-style: normal;
         font-weight: 600;
@@ -273,7 +277,7 @@ a{
         font-size: 16px;
         line-height: 22px;
         color: #fff;
-        margin: 60px 0 120px 0;
+        margin: 55px 0 114px 0;
     }
 }
 
@@ -282,7 +286,7 @@ a{
 // Категории
 
 .main__сategory{
-    margin-bottom: 120px;
+    margin-bottom: 76px;
 }
 .сategory{
     .header-block__promo-text::after{
@@ -373,7 +377,7 @@ a{
         line-height: 19px;
     }
     .reviews__the-control-buttons-reviews{
-        margin-bottom: 23px;
+        margin-bottom: 10px;
     }
     .reviews__name-author{
         margin: 0;
@@ -451,7 +455,7 @@ a{
 // Подписка
 
 .main__subscription{
-    margin-bottom: 100px;
+    margin-bottom: 119px;
 }
 .subscription{
     .subscription__title,
