добавлен адаптивный режим для промо блока

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -168,6 +168,39 @@ a{
         line-height: 22px;
         color: #fff;
     }
+    @media screen and (max-width: 1140px){
+        .promo-text__title{
+            line-height: 75px;
+        }
+    }
+    @media screen and (max-width: 992px){
+        .promo-text__title{
+            line-height: 75px;
+        }
+        .promo-text__block-image::before,
+        .promo-text__block-image::after{
+            display: none;
+        }
+    }
+    @media screen and (max-width: 767px){
+        .promo-text__treatment-to-the-client{
+            font-size: 29px;
+            line-height: 36px;
+        }
+        .promo-text__title{
+            line-height: 66px;
+            font-size: 60px;
+        }
+        .promo-text__block-image{
+            width: 250px;
+            height: 500px;
+        }
+    }
+}
+@media screen and (max-width: 767px){
+    .body__header{
+        padding-bottom: 99px;
+    }
 }
 
 // --Промо текст--
