--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -181,6 +181,9 @@ a{
         .promo-text__block-image::after{
             display: none;
         }
+        .promo-text__block-image{
+            height: 700px;
+        }
     }
     @media screen and (max-width: 767px){
         .promo-text__treatment-to-the-client{
@@ -197,46 +200,73 @@ a{
         }
     }
 }
-@media screen and (max-width: 767px){
+@media screen and (max-width: 992px){
     .body__header{
         padding-bottom: 99px;
     }
+    .promo-text{
+        padding-bottom: 178px;
+    }
 }
+@media screen and (max-width: 767px){
+    .promo-text{
+        padding-bottom: 70px;
+    }
+}
+
 
 // --Промо текст--
 
 // Заголовки блоков
 
+.header-block{
+    margin-bottom: 15px;
+}
 .header-block__promo-text{
     padding-left: 36px;
+    padding-right: 10px;
+    margin-bottom: 0;
     font-family: Nunito;
     font-style: normal;
     font-weight: bold;
     font-size: 36px;
     line-height: 49px;
     color: #3E3F43;
+    display: flex;
+    align-self: center;
+    white-space: nowrap;
 }
 .header-block__promo-text::before{
     content: "";
     position: absolute;
-    left: 15px;
-    top: 9px;
     display: flex;
     width: 30px;
     height: 30px;
     background-image: url(../images/listik_SMAILL.png);
+    margin-top: 8px;
+    margin-left: -37px;
+    
 }
-.header-block__promo-text::after{
-    content: "";
+.header-block__hell{
     display: flex;
-    width: 443px;
+    align-self: center;
+    width: 100%;
     height: 2px;
     background: #000;
-    margin-left: 231px;
-    margin-top: -25px;
+
 }
+// .header-block__promo-text::after{
+//     content: "";
+//     display: flex;
+//     width: 443px;
+//     height: 2px;
+//     background: #000;
+//     margin-left: 231px;
+//     margin-top: -25px;
+// }
 .header-block__promo-text-large{
     margin: 0;
+    padding-left: 10px;
     font-family: Nunito;
     font-style: normal;
     font-weight: 800;
@@ -244,10 +274,105 @@ a{
     line-height: 98px;
     color: rgba(34, 34, 34, 0.1);
     text-align: right;
+    white-space: nowrap;
 }
-.header-block__title-block{
-    margin-bottom: 43px;
+@media screen and (max-width: 992px){
+    .header-block__promo-text-large{
+        font-size: 52px;
+    }
+    .header-block__promo-text{
+        font-size: 27px;
+    }
 }
+@media screen and (max-width: 767px){
+    .header-block__promo-text-large{
+        font-size: 36px;
+    }
+    .header-block__promo-text{
+        font-size: 21px;
+    }
+}
+// @media screen and (max-width: 510px){
+//     .header-block__promo-text{
+//         font-size: 20px;
+//     }
+//     .header-block__promo-text-large {
+//         font-size: 34px;
+//     }
+// }
+@media screen and (max-width: 510px){
+    .header-block__promo-text-large {
+        font-size: 29px;
+    }
+    .header-block__promo-text {
+        font-size: 15px;
+    }
+}
+@media screen and (max-width: 415px){
+    .header-block__promo-text-large{
+        white-space: pre-wrap;
+        line-height: 30px;
+    }
+}
+// .header-block__title-block{
+//     margin-bottom: 43px;
+// }
+// @media screen and (max-width: 1200px){
+//     .header-block__promo-text::after{
+//         width: 266px;
+//     }
+// }
+// @media screen and (max-width: 992px){
+//     .header-block__promo-text-large{
+//         font-size: 39px;
+//     }
+//     .header-block__promo-text::after{
+//         width: 89px;
+//     }
+// }
+// @media screen and (max-width: 767px){
+//     .header-block__promo-text-large {
+//         font-size: 45px;
+//     }
+//     .header-block__promo-text{
+//         font-size: 22px;
+//         padding-left: 36px;
+//     }
+//     .header-block__promo-text::after{
+//         width: 62px;
+//         margin-left: 167px;
+//     }
+//     .promo-text{
+//         padding-bottom: 84px;
+//     }
+// }
+// @media screen and (max-width: 576px){
+//     .header-block__promo-text-large {
+//         font-size: 37px;
+//     }
+//     .header-block__promo-text{
+//         font-size: 17px;
+//     }
+//     .header-block__promo-text::after{
+//         background: #fff;
+//     }
+// }
+// @media screen and (max-width: 455px){
+//     .header-block__promo-text-large{
+//         font-size: 32px;
+//     }
+// }
+// @media screen and (max-width: 399px){
+//     .header-block__promo-text {
+//         font-size: 16px;
+//     }
+//     .header-block__promo-text-large {
+//         font-size: 24px;
+//     }
+//     .header-block__promo-text{
+//         margin-bottom: 26px;
+//     }
+// }
 
 // --Заголовки блоков--
 
@@ -313,6 +438,25 @@ a{
         right: 0;
         margin-top: -269px;
     }
+    @media screen and (max-width: 992px){
+        .about-us__img-wooden-objects::after{
+            left: -29px;
+        }
+    }
+    @media screen and (max-width: 992px){
+        .about-us__img-wooden-objects,
+        .about-us__img-custom-furniture{
+            display: none;
+        }
+        .about-us__wooden-furniture-manufacturing-services{
+            margin-bottom: 50px;
+        }
+    }
+}
+@media screen and (max-width: 992px){
+    .main__about-us{
+        margin-bottom: 20px;
+    }
 }
 
 // --Информация о компании--
@@ -364,6 +508,11 @@ a{
         line-height: 22px;
         color: #fff;
         margin: 55px 0 114px 0;
+    }
+    @media screen and (max-width: 1200px){
+        .header-block__promo-text::after{
+            width: 38px;
+        }
     }
 }
 
