--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -617,6 +617,11 @@ a{
             margin-top: 20px;
         }
     }
+    @media screen and (max-width: 576px){
+        .reviews__img{
+            width: 60%;
+        }
+    }
 }
 
 // --Отзывы--
@@ -669,6 +674,11 @@ a{
         margin-left: -7px;
         border-top-left-radius: initial;
         border-bottom-left-radius: initial;
+    }
+    @media screen and (max-width: 992px){
+        .subscription__input-email{
+            margin-top: 20px;
+        }
     }
 }
 
