--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,6 @@
 body{
     font-family: 'Nunito', sans-serif;
+    font-style: normal;
     padding: 0;
     margin: 0;
     overflow-x: hidden;
@@ -24,13 +25,13 @@ a{
     .header__list{
         margin-bottom: 0;
         align-items: center;
+        z-index: 100;
     }
     .header__item{
         list-style: none;
     }
     .header__link{
         list-style: none;
-        font-style: normal;
         font-weight: normal;
         font-size: 16px;
         line-height: 22px;
@@ -99,6 +100,7 @@ a{
         }
     }
 }
+
 // --Шапка--
 
 // Промо текст 
@@ -139,7 +141,6 @@ a{
     }
     .promo-text__treatment-to-the-client{
         font-family: Nunito;
-        font-style: normal;
         font-weight: normal;
         font-size: 36px;
         line-height: 49px;
@@ -150,7 +151,6 @@ a{
     .promo-text__title{
         margin-bottom: 16px;
         font-family: Nunito;
-        font-style: normal;
         font-weight: bold;
         font-size: 72px;
         line-height: 98px;
@@ -162,7 +162,6 @@ a{
         padding: 14px 24px;
         border: none;
         font-family: Nunito;
-        font-style: normal;
         font-weight: bold;
         font-size: 16px;
         line-height: 22px;
@@ -226,8 +225,6 @@ a{
     padding-left: 36px;
     padding-right: 10px;
     margin-bottom: 0;
-    font-family: Nunito;
-    font-style: normal;
     font-weight: bold;
     font-size: 36px;
     line-height: 49px;
@@ -258,8 +255,6 @@ a{
 .header-block__promo-text-large{
     margin: 0;
     padding-left: 10px;
-    font-family: Nunito;
-    font-style: normal;
     font-weight: 800;
     font-size: 72px;
     line-height: 98px;
@@ -285,7 +280,7 @@ a{
 }
 @media screen and (max-width: 510px){
     .header-block__promo-text-large {
-        font-size: 29px;
+        font-size: 24px;
     }
     .header-block__promo-text {
         font-size: 15px;
@@ -339,8 +334,6 @@ a{
         background-image: url(../images/listik.png);
     }
     .about-us__title{
-        font-family: Nunito;
-        font-style: normal;
         font-weight: 800;
         font-size: 36px;
         line-height: 49px;
@@ -349,8 +342,6 @@ a{
         font-weight: 400;
     }
     .about-us__subtitle{
-        font-family: Nunito;
-        font-style: normal;
         font-weight: 600;
         font-size: 24px;
         line-height: 33px;
@@ -407,8 +398,6 @@ a{
         position: absolute;
         margin-left: -165px;
         top: 25px;
-        font-family: Nunito;
-        font-style: normal;
         font-weight: 600;
         font-size: 96px;
         line-height: 131px;
@@ -418,8 +407,6 @@ a{
         margin-bottom: 20px;
     }
     .services__description{
-        font-family: Nunito;
-        font-style: normal;
         font-weight: bold;
         font-size: 24px;
         line-height: 33px;
@@ -430,8 +417,6 @@ a{
         border-radius: 4px;
         padding: 14px 24px;
         border: none;
-        font-family: Nunito;
-        font-style: normal;
         font-weight: bold;
         font-size: 16px;
         line-height: 22px;
@@ -482,8 +467,6 @@ a{
         border: 1px solid #3E3F43;
         box-sizing: border-box;
         border-radius: 4px;
-        font-family: Nunito;
-        font-style: normal;
         font-weight: 600;
         font-size: 18px;
         line-height: 25px;
@@ -502,8 +485,6 @@ a{
         margin-left: 0;
     }
     .category__title{
-        font-family: Nunito;
-        font-style: normal;
         font-weight: 800;
         font-size: 24px;
         line-height: 33px;
@@ -536,8 +517,6 @@ a{
         margin-bottom: 16px;
     }
     .reviews__opinion{
-        font-family: Nunito;
-        font-style: normal;
         font-weight: 600;
         font-size: 14px;
         line-height: 19px;
@@ -547,8 +526,6 @@ a{
     }
     .reviews__name-author{
         margin: 0;
-        font-family: Nunito;
-        font-style: normal;
         font-weight: 600;
         font-size: 12px;
         line-height: 16px;
@@ -557,8 +534,6 @@ a{
         margin-right: 8px;
     }
     .reviews__previous{
-        font-family: Nunito;
-        font-style: normal;
         font-weight: 600;
         font-size: 14px;
         line-height: 19px;
@@ -577,8 +552,6 @@ a{
         background-image: url(../images/Arrow2.png);
     }
     .reviews__next{
-        font-family: Nunito;
-        font-style: normal;
         font-weight: 600;
         font-size: 14px;
         line-height: 19px;
@@ -642,8 +615,6 @@ a{
 .subscription{
     .subscription__title,
     .subscription__subtitle{
-        font-family: Nunito;
-        font-style: normal;
         font-weight: bold;
         font-size: 18px;
         line-height: 25px;
@@ -662,8 +633,6 @@ a{
         border-radius: 4px;
         background: none;
         padding: 9px 16px;
-        font-family: Nunito;
-        font-style: normal;
         font-weight: normal;
         font-size: 16px;
         line-height: 22px;
@@ -680,6 +649,11 @@ a{
             margin-top: 20px;
         }
     }
+    @media screen and (max-width: 576px){
+        .subscription__input-email{
+            font-size: 14px;
+        }
+    }
 }
 
 // --Подписка--
@@ -691,8 +665,6 @@ a{
 }
 .lower-part-footer{
     .lower-part-footer__title{
-        font-family: Nunito;
-        font-style: normal;
         font-weight: 600;
         font-size: 18px;
         line-height: 25px;
@@ -700,8 +672,6 @@ a{
         margin-bottom: 16px
     }
     .lower-part-footer__item{
-        font-family: Nunito;
-        font-style: normal;
         font-weight: normal;
         font-size: 14px;
         line-height: 19px;
@@ -710,16 +680,12 @@ a{
     .copywriting{
         text-align: center;
         margin-top: 45px;
-        font-family: Nunito;
-        font-style: normal;
         font-weight: 600;
         font-size: 12px;
         line-height: 16px;
         color: #8D8D8D;
     }
     .lower-part-footer__logo{
-        font-family: Nunito;
-        font-style: normal;
         font-weight: bold;
         font-size: 24px;
         line-height: 33px;
@@ -742,6 +708,39 @@ a{
         background: #C4C4C4;
         left: 14px;
         margin-top: -20px;
+    }
+    @media screen and (max-width: 992px){
+        .lower-part-footer__logo::after{
+            width: 692px;
+        }
+    }
+    @media screen and (max-width: 767px){
+        .lower-part-footer__logo::after{
+            width: 531px;
+        }
+        .lower-part-footer__title{
+            font-size: 13px;
+        }
+        .lower-part-footer__item{
+            font-size: 12px;
+        }
+        .lower-part-footer__logo{
+            font-size: 17px;
+        }
+    }
+    @media screen and (max-width: 576px){
+        .lower-part-footer__title{
+            font-size: 20px;
+        }
+        .lower-part-footer__item{
+            font-size: 14px;
+        }
+        .lower-part-footer__logo{
+            font-size: 14px;
+        }
+        .lower-part-footer__logo::after{
+            width: 269px;
+        }
     }
 }
 
